layout bug fixes

--- a/src/wise/theme/static/wise/src/less/fixes.less
+++ b/src/wise/theme/static/wise/src/less/fixes.less
@@ -16,3 +16,9 @@
 .leadImage {
     display: none;
 }
+
+
+#edit-bar {
+    min-height: 4rem;
+    border-radius: .5em;
+}
